# unified-workbench

./: .gitignore  .unified-workbench  AGENTS.md  README.md
项目文件/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
项目文件/backend/alembic/: env.py
项目文件/backend/alembic/versions/: 001_initial_tables.py  002_p1_tables.py  003_p2_tables.py  004_p3_tables.py  005_p4_indexes.py  006_finance_tables.py  007_add_secret_category.py  008_add_sub_category.py  009_file_folder_expiry_inventory.py  010_create_module_tables.py  011_seed_setup_complete.py  012_add_note_parent_id.py  013_change_avatar_to_text.py  014_create_topology_table.py  015_add_visibility_to_form_vote_topology.py  016_merge_topology_types.py  017_rename_topology_type_to_category.py  018_stream_room.py
项目文件/backend/app/: __init__.py  conftest.py  main.py  version.py
项目文件/backend/app/api/: announcements.py  audit.py  auth.py  backups.py  calendar_events.py  contacts.py  content.py  files.py  finance.py  forms.py  health.py  inventory.py  notes.py  notifications.py  project_documents.py  records.py  reminders.py  router.py  secret_categories.py  secrets.py  stream.py  stream_room.py  stream_ws.py  system.py  system_config.py  tags.py  tasks.py  templates.py  topology.py  users.py  votes.py  ws.py
项目文件/backend/app/core/: config.py  database.py  deps.py  encryption.py  permissions.py  security.py  visibility.py  websocket.py
项目文件/backend/app/models/: __init__.py  announcement.py  audit_log.py  budget.py  calendar_event.py  contact.py  content.py  content_file.py  file.py  folder.py  form.py  note.py  (+17 more)
(+402 files in other folders)
